force-app/main/default/objects/ACBalanceObligation__c/ACBalanceObligation__c.object-meta.xml
<CustomObject>
    <label>A/C Bal+Obligation Decl</label>
    <nameField>
        <displayFormat>ACODB-{00000}</displayFormat>
        <label>A/C BAL+OBLIGATION ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A/C Bal+Obligation Decl</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>