force-app/main/default/objects/ACBalanceObligation__c/fields/CreditTransactionFormula__c.field-meta.xml
<CustomField>
    <fullName>CreditTransactionFormula__c</fullName>
    <formula>ACBalanceID__r.TransactionBalanceLocalCredit__c</formula>
    <label>CREDIT TRANSACTION-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>