force-app/main/default/objects/ACBalanceObligation__c/fields/DebitTransactionObligation__c.field-meta.xml
<CustomField>
    <fullName>DebitTransactionObligation__c</fullName>
    <label>DEBIT TRANSACTION-OBLIGATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>