force-app/main/default/objects/ACBalanceObligation__c/fields/TaxDeclarationID__c.field-meta.xml
<CustomField>
    <fullName>TaxDeclarationID__c</fullName>
    <label>TAX DECLARATION ID</label>
    <referenceTo>TAXDeclaration__c</referenceTo>
    <relationshipName>ACBalTax</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>